# Blast-email-personally-using-Flask-Python

./: Book2.xlsx  Empty Template.xlsx  README.md  Readme.txt  main.py  pyproject.toml
.cache/nix/: binary-cache-v6.sqlite  fetcher-cache-v1.sqlite
.cache/pypoetry/artifacts/49/0e/55/b0922cf4ad3bf2f3502453b7c65c9562b657cc650a8e223b13d9172054/: simple_colors-0.1.5-py3-none-any.whl
.cache/pypoetry/artifacts/4b/73/22/d8223ff196d22b807fde62dd9c7ceb55bf54e5ac4bf2efad5911af54ac/: jedi-0.19.0-py2.py3-none-any.whl
.cache/pypoetry/artifacts/4b/76/6f/16cb150a68009da70836df19155ec2b32ef22a44e0d2e549c9d109405c/: greenlet-3.0.0-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
.cache/pypoetry/artifacts/b3/2f/64/94bcfaf846637678c3248820d9e7a1db55b01c47734afabfdd914a55c2/: Flask_Compress-1.14-py3-none-any.whl
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
templates/: 404.html  500.html  announcement.html  base.html  buktibayar.html  index.html  main.html  payment.html
